# thistle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bench.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: geolocation.ipynb  orbital_data.ipynb  plot_visibility.ipynb  plot_visibility.py
src/thistle/: __init__.py  __main__.py  _core.py  _utils.py  alpha5.py  benchmark.py  cli.py  config.py  events.py  ground_sites.py  io.py  loader.py  orbit_data.py  propagator.py  reader.py  satellite.py  store.py  switcher.py  tracking.py  typing.py  utils.py
src/thistle/cli/: __init__.py  _app.py  _helpers.py
tests/: conftest.py  strategies.py  test_alpha5.py  test_cli.py  test_events.py  test_ground_sites.py  test_io.py  test_jday_range.py  test_loader.py  test_orbit_data.py  test_physics.py  test_propagator.py  test_reader.py  test_satellite.py  test_switcher.py  test_tracking.py  test_utils.py
tests/data/: leo.tle
tests/data/truth/: 25544_Access_KSC.csv  25544_Ascending_Node.csv  25544_Beta_Angle.csv  25544_COE_Epoch.csv  25544_COE_Midpoint.csv  25544_COE_TCA.csv  25544_ECEF_Epoch.csv  25544_ECEF_Midpoint.csv  25544_ECEF_TCA.csv  25544_ECI_Epoch.csv  25544_ECI_Midpoint.csv  25544_ECI_TCA.csv  25544_Eclipse_Times.csv  25544_Equinoctial_Epoch.csv  25544_Equinoctial_Midpoint.csv  25544_Equinoctial_TCA.csv  25544_KSC_AER_Epoch.csv  25544_KSC_AER_Midpoint.csv  25544_KSC_AER_TCA.csv  25544_LLA_Midpoint.csv  25544_LLA_TCA.csv  25544_MAG_Epoch.csv  25544_MAG_Midpoint.csv  25544_MAG_TCA.csv  25544_Magnetic_Field.csv  25544_SAT_Epoch.csv  25544_SAT_Midpoint.csv  25544_SAT_TCA.csv  25544_Sun.csv  25544_Umbra.csv
tests/ground_truth/: __init__.py  conftest.py  test_beta_angle.py  test_ecef.py  test_eci.py  test_equinoctial.py  test_events.py  test_keplerian.py  test_lla.py  test_local_solar_time.py  test_magnetic_field.py  test_range.py  test_sunlight.py
