[project]
name = "thistle"
description = "A wrapper for sgp4 that handles TLE switching"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "numpy>=1.22",
    "platformdirs>=4.3.7",
    "sgp4>=2.23",
    "skyfield>=1.53",
    "tqdm>=4.67.1",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/thistle/_version.py"

[dependency-groups]
dev = [
    "hypothesis>=6.124.2",
    "pytest>=8.3.4",
]

[tool.pyright]
# Suppress type errors from third-party libraries without complete type stubs
reportAttributeAccessIssue = "none"
reportOperatorIssue = "none"
reportOptionalMemberAccess = "none"

# Only apply to third-party modules
[[tool.pyright.executionEnvironments]]
root = "."
include = ["src", "tests"]
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Per-module options for third-party libraries
[[tool.mypy.overrides]]
module = [
    "skyfield.*",
    "sgp4.*",
]
ignore_missing_imports = true
ignore_errors = true
