[project]
name = "thistle"
description = "A wrapper for sgp4 that handles TLE switching"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "geographiclib>=2.0",
    "numpy>=1.22",
    "ppigrf>=2.1.0",
    "pyright>=1.1.408",
    "scipy>=1.13.1",
    "sgp4>=2.23",
    "skyfield>=1.53",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/thistle/_version.py"

[dependency-groups]
dev = [
    "cartopy>=0.23.0",
    "hypothesis>=6",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.9.4",
    "pytest>=7",
]

[tool.pyright]
# Suppress type errors from third-party libraries without complete type stubs
reportAttributeAccessIssue = "none"
reportOperatorIssue = "none"
reportOptionalMemberAccess = "none"

# Only apply to third-party modules
[[tool.pyright.executionEnvironments]]
root = "."
include = ["src", "tests"]
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Per-module options for third-party libraries
[[tool.mypy.overrides]]
module = [
    "skyfield.*",
    "sgp4.*",
]
ignore_missing_imports = true
ignore_errors = true
